--- a/dev/templates/home.html
+++ b/dev/templates/home.html
@@ -9,14 +9,13 @@
       <h2>Servers</h2>
       {% if user.admin %}
         <p>
-          You can launch an unlimited number of servers (admin only). Regular users are limited to 2 servers and GPU users are limited to 3 servers.
+          You can launch an unlimited number of servers (admin only).
           When adding servers using the 'Add New Server' button, don't add any spaces or capital letters in the server name!
         </p>
       {% else %}
         <p>
-          You can launch a total of {{ named_server_limit_per_user + 1 }} server(s) at one time -
-          {{ named_server_limit_per_user }} of these servers can have GPUs.
-          When adding GPU servers using the 'Add New Server' button, don't add any spaces or capital letters in the server name!
+          You can launch a total of {{ named_server_limit_per_user + 1 }} server(s).
+          When adding servers using the 'Add New Server' button, don't add any spaces or capital letters in the server name!
         </p>
       {% endif %}
       {% set named_spawners = user.all_spawners(include_default=False)|list %}
@@ -33,7 +32,7 @@
         </thead>
         <tbody>
           <tr class="home-server-row" data-server-name="default">
-            <td>cpu-only</td>
+            <td>default</td>
             <td>
               {% if default_server.user_options.GPUType and default_server.active %}
                 {{ default_server.user_options.Image}}-{{ default_server.user_options.GPUType}}
