--- a/hub/templates/spawn.html
+++ b/hub/templates/spawn.html
@@ -1,5 +1,3 @@
-<!--this is the only template that needs to be changed when we upgrade-->
-<!--(and form.html needs to be added)-->
 {% extends "page.html" %}
 {% if announcement_spawn is string %}
   {% set announcement = announcement_spawn %}
@@ -11,44 +9,44 @@
       <div class="row text-center">
         <h1>Server Options</h1>
       </div>
-      {% endblock %}
-      <div class="row col-sm-offset-2 col-sm-8">
-        {% if for_user and user.name != for_user.name -%}
-          <p>Spawning server for {{ for_user.name }}</p>
-        {% endif -%}
-        {% if error_message -%}
-          <p class="spawn-error-msg text-danger">
-            Error: {{error_message}}
-          </p>
-        {% endif %}
-        <form enctype="multipart/form-data" id="spawn_form" action="{{ url | safe }}" method="post" role="form">
-          {{spawner_options_form | safe}}
-          <br>
-          <div class="feedback-container">
-            <input type="submit" value="Start" class="btn btn-jupyter form-control">
-            <div class="feedback-widget hidden">
-              <i class="fa fa-spinner"></i>
+      {% endblock heading %}
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          {% if for_user and user.name != for_user.name -%}
+            <p>Spawning server for {{ for_user.name }}</p>
+          {% endif -%}
+          {% if error_message -%}<p class="spawn-error-msg alert alert-danger">Error: {{ error_message }}</p>{% endif %}
+          <form enctype="multipart/form-data"
+              id="spawn_form"
+              action="{{ url | safe }}"
+              method="post"
+              role="form">
+            {{ spawner_options_form | safe }}
+            <br>
+            <div class="feedback-container">
+              <button type="submit" class="btn btn-jupyter form-control">Start</button>
+              <div class="feedback-widget hidden">
+                <i class="fa fa-spinner"></i>
+              </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
 
       <!-- Custom GPU availability -->
-      <div class="row col-sm-offset-2 col-sm-8" style="margin-top: 20px; align-items: center;">
-        <div class="gpu-status" style="font-size: 1.3em; text-align: center;">
+      <div class="row justify-content-center mt-5">
+        <div class="col-md-8 text-center">
           <h3>GPU Availability</h3>
-          <div class="table-wrapper" style="width: 50%; margin: 0 auto;">
-            <table id="gpu-status-container" class="table table-bordered" style="display: none;">
-              <thead>
-                <tr>
-                  <th style="text-align: center;">Type</th>
-                  <th style="text-align: center;">Node</th>
-                  <th style="text-align: center;">Available</th>
-                </tr>
-              </thead>  
-              <tbody><!-- dynamically updated by updateGpuStatus fn--></tbody>
-            </table>
-          </div>
+          <table id="gpu-status-container" class="table table-bordered mx-auto" style="display: none; width: auto;">
+            <thead>
+              <tr>
+                <th>Type</th>
+                <th>Node</th>
+                <th>Available</th>
+              </tr>
+            </thead>  
+            <tbody><!-- dynamically updated by updateGpuStatus fn--></tbody>
+          </table>
           <p class="mt-2">Your server will fail to launch if you request more <s>cats</s> GPUs than available!</p>
         </div>
       </div>
