fix: remove munchy worm from spawn pending

--- a/hub/templates/spawn_pending.html
+++ b/hub/templates/spawn_pending.html
@@ -29,11 +29,11 @@
       </div>
     </div>
     <!-- Embedding the Munchy Worm game on the spawn pending page -->
-    <div style="text-align: center; width: 100%"; padding: 20px 0">
+    <!-- <div style="text-align: center; width: 100%"; padding: 20px 0">
       <h3>Play some Muchy Worm while your server launches!</h3>
         <object data="https://antibody-software.com/munchy-worm-game/index" style="width: 100%; height: 80vh; border: none; overflow: auto;">
         <p>Your browser does not support this object.</p>
-    </div>
+    </div> -->
   </div>
 {% endblock main %}
 {% block script %}
