modify server descriptions

--- a/hub/templates/home.html
+++ b/hub/templates/home.html
@@ -9,13 +9,17 @@
       <h2>Servers</h2>
       {% if user.admin %}
         <p>
+          Create new servers with the "Add New Server" button to launch high-resource CPU or GPU instances.
           You can launch an unlimited number of servers (admin only).
-          When adding servers using the 'Add New Server' button, don't add any spaces or capital letters in the server name!
+          Server names cannot contain spaces or uppercase letters.
+          Please remember to shut down your servers when you are finished using them.<br><br>
         </p>
       {% else %}
         <p>
-          You can launch a total of {{ named_server_limit_per_user + 1 }} server(s).
-          When adding servers using the 'Add New Server' button, don't add any spaces or capital letters in the server name!
+          Create new servers with the "Add New Server" button to launch high-resource CPU or GPU instances.
+          You can launch a maximum of {{ named_server_limit_per_user + 1 }} server(s).
+          Server names cannot contain spaces or uppercase letters.
+          Please remember to shut down your servers when you are finished using them.<br><br>
         </p>
       {% endif %}
       {% set named_spawners = user.all_spawners(include_default=False)|list %}
